Added out of range recognition to map; closes #55